# Portfolio-Projects

./: README.md
Gen-AI/: GANs-PyTorch.ipynb  RNN_Captioning.ipynb
Gen-AI/cs6353/classifiers/: rnn.py
Lung Segmentation/: Project(lung).ipynb  Project1.ipynb  Project2.ipynb
Solidity/: chainlink_commits.csv  convert.py  datavalidate.py  extarct2.py  extract.py  extract1.py  extract3.py  extract4.py  extract_history.py  repo-smart-contracts_commits.csv  repo-smart-contracts_version_history.json  solidity_commits.csv  stablecoin-evm_commits.csv  stablecoin-evm_version_history.json  structured_version_history.json  version_history.csv  version_history.json
Wiclean/Files/: wikiscraper.tar
Wiclean/wiclean/: 01_preprocess.ipynb  02_pattern_mining.ipynb  03_anomaly_detection.ipynb  README.md  docker-compose.yml  extract_data.sh  scraper.sh  start.sh
Wiclean/wiclean/scraper/: Cargo.toml  examples.txt  test_xml_data.xml
Wiclean/wiclean/scraper/src/: ingest.rs  main.rs  postprocess_to_parquet.rs
Wiclean/wiclean/scraper/src/ingest/: index.rs  parser.rs  temp_db.rs
