[package]
name = "wikiscrape5"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "rustls-tls-native-roots-no-provider",
] }
rustls = { version = "0.23", default-features = false, features = [
    "aws_lc_rs",
] }
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
scraper = { version = "0.23", features = ["atomic"] }
tracing = "0.1"
tracing-subscriber = "0.3"
percent-encoding = "2"
regex = "1"
mimalloc = { version = "0.1", default-features = false }
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
bincode = "1"
fjall = { version = "2", features = ["miniz"] }
zstd = { version = "0.13", features = ["experimental"] }
compact_str = { version = "0.9", features = ["serde"] }
jiff = { version = "0.2", features = ["serde"] }
lz4_flex = { version = "0.11", default-features = false, features = [
    "nightly",
    "frame",
] }
rayon = "1"
url = "2"
flume = "0.11"
bytes = "1"
sevenz-rust2 = "0.12"
tokio-signal = "0.2"
redb = { version = "2", features = ["logging"] }
parquet = { git = "https://github.com/apache/arrow-rs" }
arrow = { git = "https://github.com/apache/arrow-rs" }
pbr = "1"
foldhash = "0.1"
dashmap = "6"
rand = "0.9"
jemallocator = "0.5"
blake3 = "1"

[profile.profiling]
inherits = "release"
debug = true

[profile.max]
inherits = "release"
lto = "thin"
debug = true
